--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 # Core's dependencies are managed with Composer.
 vendor
 
+tags
+!tags/
+
 # Ignore configuration files that may contain sensitive information.
 sites/*/settings*.php
 sites/*/services*.yml
